--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 23:05:03 2018</p>
+         Last Run: Fri Jul 20 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,10 +34,10 @@
                         <td>17</td>
                         <td>17</td>
                         <td>0</td>
-                        <td>39</td>
+                        <td>41</td>
                         <td>3</td>
-                        <td>10</td>
-                        <td>SW</td>
+                        <td>8</td>
+                        <td>SSW</td>
                         <td>8</td>
                      </tr>
                      <tr>
@@ -46,10 +46,10 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>35</td>
                         <td>4</td>
-                        <td>10</td>
-                        <td>WSW</td>
+                        <td>8</td>
+                        <td>SW</td>
                         <td>10</td>
                      </tr>
                      <tr>
@@ -61,8 +61,8 @@
                         <td>29</td>
                         <td>6</td>
                         <td>10</td>
-                        <td>WSW</td>
-                        <td>13</td>
+                        <td>SW</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>27</td>
+                        <td>26</td>
                         <td>7</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
-                        <td>39</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -214,10 +214,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "39",
-                 "34",
+                 "41",
+                 "35",
                  "29",
-                 "27",
+                 "26",
                  "25"
                ]
              },
@@ -228,8 +228,8 @@
                "data":[
                  "8",
                  "10",
-                 "13",
-                 "39",
+                 "14",
+                 "40",
                  "45"
                ]
              }
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 23:05:03 2018</p>
+         Last Run: Fri Jul 20 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -275,8 +275,8 @@
                         <td>34</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>ESE</td>
-                        <td>16</td>
+                        <td>E</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -284,11 +284,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>2</td>
-                        <td>38</td>
+                        <td>39</td>
                         <td>0</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>13</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -296,7 +296,7 @@
                         <td>19</td>
                         <td>19</td>
                         <td>5</td>
-                        <td>45</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
@@ -419,8 +419,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "34",
-                 "38",
-                 "45"
+                 "39",
+                 "46"
                ]
              },
              {
@@ -428,8 +428,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "22",
                  "16",
-                 "13",
                  "11"
                ]
              }
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 23:05:03 2018</p>
+         Last Run: Fri Jul 20 00:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -471,12 +471,12 @@
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>13</td>
-                        <td>35</td>
+                        <td>14</td>
+                        <td>36</td>
                         <td>2</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>51</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -486,33 +486,33 @@
                         <td>14</td>
                         <td>39</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>E</td>
-                        <td>51</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>13</td>
-                        <td>44</td>
+                        <td>14</td>
+                        <td>45</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>51</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>21</td>
                         <td>52</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ENE</td>
-                        <td>50</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -524,7 +524,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>NE</td>
-                        <td>49</td>
+                        <td>52</td>
                      </tr>
                   </tbody>
                </table>
@@ -573,7 +573,7 @@
                  "24",
                  "23",
                  "22",
-                 "20",
+                 "19",
                  "17"
                ]
              },
@@ -586,7 +586,7 @@
                  "24",
                  "23",
                  "22",
-                 "20",
+                 "19",
                  "17"
                ]
              }
@@ -640,9 +640,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "13",
                  "14",
-                 "13",
+                 "14",
+                 "14",
                  "21",
                  "24"
                ]
@@ -652,9 +652,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "35",
+                 "36",
                  "39",
-                 "44",
+                 "45",
                  "52",
                  "62"
                ]
@@ -664,11 +664,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "51",
-                 "51",
-                 "51",
-                 "50",
-                 "49"
+                 "52",
+                 "53",
+                 "53",
+                 "52",
+                 "52"
                ]
              }
            ]
