--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 01:05:03 2018</p>
+         Last Run: Fri Jul 20 02:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>3</td>
                         <td>8</td>
                         <td>SSW</td>
-                        <td>8</td>
+                        <td>7</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -50,7 +50,7 @@
                         <td>4</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>10</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>6</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>16</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>7</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>40</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -82,11 +82,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>15</td>
-                        <td>25</td>
+                        <td>24</td>
                         <td>7</td>
                         <td>14</td>
-                        <td>W</td>
-                        <td>40</td>
+                        <td>WSW</td>
+                        <td>44</td>
                      </tr>
                   </tbody>
                </table>
@@ -218,7 +218,7 @@
                  "35",
                  "29",
                  "26",
-                 "25"
+                 "24"
                ]
              },
              {
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "8",
-                 "10",
-                 "16",
-                 "40",
-                 "40"
+                 "7",
+                 "5",
+                 "9",
+                 "38",
+                 "44"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 01:05:03 2018</p>
+         Last Run: Fri Jul 20 02:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -268,39 +268,39 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>Partly Cloudy</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>3</td>
-                        <td>34</td>
+                        <td>35</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>E</td>
-                        <td>19</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>3</td>
                         <td>38</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>E</td>
-                        <td>15</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>6</td>
                         <td>45</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ENE</td>
-                        <td>11</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -344,9 +344,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "22",
                  "21",
-                 "19"
+                 "20",
+                 "18"
                ]
              },
              {
@@ -355,9 +355,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "22",
                  "21",
-                 "19"
+                 "20",
+                 "18"
                ]
              }
            ]
@@ -418,7 +418,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "34",
+                 "35",
                  "38",
                  "45"
                ]
@@ -428,9 +428,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "19",
-                 "15",
-                 "11"
+                 "35",
+                 "22",
+                 "14"
                ]
              }
            ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 01:05:03 2018</p>
+         Last Run: Fri Jul 20 02:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -471,60 +471,60 @@
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>10</td>
-                        <td>37</td>
-                        <td>2</td>
-                        <td>11</td>
-                        <td>ESE</td>
+                        <td>4</td>
                         <td>34</td>
+                        <td>2</td>
+                        <td>13</td>
+                        <td>ESE</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>11</td>
-                        <td>40</td>
+                        <td>4</td>
+                        <td>37</td>
                         <td>1</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>38</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>12</td>
-                        <td>44</td>
+                        <td>5</td>
+                        <td>42</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>42</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>31</td>
-                        <td>51</td>
+                        <td>22</td>
+                        <td>49</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>NE</td>
-                        <td>45</td>
+                        <td>ENE</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>41</td>
-                        <td>59</td>
+                        <td>Partly Cloudy</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>24</td>
+                        <td>58</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NE</td>
-                        <td>50</td>
+                        <td>52</td>
                      </tr>
                   </tbody>
                </table>
@@ -574,7 +574,7 @@
                  "23",
                  "22",
                  "20",
-                 "17"
+                 "18"
                ]
              },
              {
@@ -587,7 +587,7 @@
                  "23",
                  "22",
                  "20",
-                 "17"
+                 "18"
                ]
              }
            ]
@@ -640,11 +640,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "10",
-                 "11",
-                 "12",
-                 "31",
-                 "41"
+                 "4",
+                 "4",
+                 "5",
+                 "22",
+                 "24"
                ]
              },
              {
@@ -652,11 +652,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "34",
                  "37",
-                 "40",
-                 "44",
-                 "51",
-                 "59"
+                 "42",
+                 "49",
+                 "58"
                ]
              },
              {
@@ -664,11 +664,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "34",
                  "38",
-                 "42",
-                 "45",
-                 "50"
+                 "43",
+                 "48",
+                 "51",
+                 "52"
                ]
              }
            ]
