--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 03:05:03 2018</p>
+         Last Run: Fri Jul 20 04:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>17</td>
                         <td>17</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>42</td>
                         <td>3</td>
                         <td>8</td>
                         <td>S</td>
@@ -48,7 +48,7 @@
                         <td>0</td>
                         <td>35</td>
                         <td>4</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SSW</td>
                         <td>4</td>
                      </tr>
@@ -62,7 +62,7 @@
                         <td>6</td>
                         <td>10</td>
                         <td>SW</td>
-                        <td>9</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -70,9 +70,9 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>27</td>
+                        <td>26</td>
                         <td>7</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>WSW</td>
                         <td>38</td>
                      </tr>
@@ -82,11 +82,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>15</td>
-                        <td>25</td>
+                        <td>24</td>
                         <td>7</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>WSW</td>
-                        <td>46</td>
+                        <td>44</td>
                      </tr>
                   </tbody>
                </table>
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "43",
+                 "42",
                  "35",
                  "29",
-                 "27",
-                 "25"
+                 "26",
+                 "24"
                ]
              },
              {
@@ -228,9 +228,9 @@
                "data":[
                  "2",
                  "4",
-                 "9",
+                 "6",
                  "38",
-                 "46"
+                 "44"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 03:05:03 2018</p>
+         Last Run: Fri Jul 20 04:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 03:05:03 2018</p>
+         Last Run: Fri Jul 20 04:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -471,43 +471,43 @@
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>4</td>
+                        <td>3</td>
                         <td>34</td>
                         <td>2</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>38</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>4</td>
-                        <td>37</td>
+                        <td>3</td>
+                        <td>38</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>E</td>
-                        <td>43</td>
+                        <td>ESE</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>5</td>
+                        <td>3</td>
                         <td>42</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>48</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>22</td>
+                        <td>21</td>
                         <td>49</td>
                         <td>0</td>
                         <td>11</td>
@@ -524,7 +524,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>NE</td>
-                        <td>52</td>
+                        <td>51</td>
                      </tr>
                   </tbody>
                </table>
@@ -640,10 +640,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "4",
-                 "5",
-                 "22",
+                 "3",
+                 "3",
+                 "3",
+                 "21",
                  "24"
                ]
              },
@@ -653,7 +653,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "34",
-                 "37",
+                 "38",
                  "42",
                  "49",
                  "58"
@@ -664,11 +664,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "38",
-                 "43",
-                 "48",
+                 "37",
+                 "42",
+                 "47",
                  "51",
-                 "52"
+                 "51"
                ]
              }
            ]
