--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 06:05:03 2018</p>
+         Last Run: Fri Jul 20 07:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -58,7 +58,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>29</td>
                         <td>6</td>
                         <td>10</td>
                         <td>SW</td>
@@ -72,7 +72,7 @@
                         <td>15</td>
                         <td>26</td>
                         <td>7</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>WSW</td>
                         <td>38</td>
                      </tr>
@@ -83,7 +83,7 @@
                         <td>22</td>
                         <td>15</td>
                         <td>24</td>
-                        <td>7</td>
+                        <td>6</td>
                         <td>16</td>
                         <td>WSW</td>
                         <td>50</td>
@@ -216,7 +216,7 @@
                "data":[
                  "44",
                  "36",
-                 "30",
+                 "29",
                  "26",
                  "24"
                ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 06:05:03 2018</p>
+         Last Run: Fri Jul 20 07:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -272,11 +272,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>3</td>
-                        <td>35</td>
+                        <td>36</td>
                         <td>1</td>
                         <td>14</td>
                         <td>E</td>
-                        <td>32</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -284,11 +284,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>3</td>
-                        <td>38</td>
+                        <td>39</td>
                         <td>0</td>
                         <td>14</td>
-                        <td>E</td>
-                        <td>22</td>
+                        <td>ENE</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -300,7 +300,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>ENE</td>
-                        <td>14</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -418,8 +418,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "35",
-                 "38",
+                 "36",
+                 "39",
                  "46"
                ]
              },
@@ -428,9 +428,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "32",
-                 "22",
-                 "14"
+                 "30",
+                 "20",
+                 "13"
                ]
              }
            ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 06:05:03 2018</p>
+         Last Run: Fri Jul 20 07:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -471,60 +471,60 @@
                         <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>4</td>
+                        <td>10</td>
                         <td>33</td>
                         <td>2</td>
                         <td>13</td>
-                        <td>ESE</td>
-                        <td>56</td>
+                        <td>SE</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>4</td>
-                        <td>37</td>
+                        <td>11</td>
+                        <td>36</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>57</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>5</td>
-                        <td>41</td>
+                        <td>11</td>
+                        <td>40</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>E</td>
-                        <td>57</td>
+                        <td>ESE</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>23</td>
-                        <td>48</td>
+                        <td>24</td>
+                        <td>47</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>58</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>18</td>
-                        <td>18</td>
-                        <td>24</td>
-                        <td>57</td>
+                        <td>Chance of Rain</td>
+                        <td>17</td>
+                        <td>17</td>
+                        <td>31</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>ENE</td>
-                        <td>57</td>
+                        <td>E</td>
+                        <td>61</td>
                      </tr>
                   </tbody>
                </table>
@@ -574,7 +574,7 @@
                  "23",
                  "22",
                  "20",
-                 "18"
+                 "17"
                ]
              },
              {
@@ -587,7 +587,7 @@
                  "23",
                  "22",
                  "20",
-                 "18"
+                 "17"
                ]
              }
            ]
@@ -640,11 +640,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "4",
-                 "5",
-                 "23",
-                 "24"
+                 "10",
+                 "11",
+                 "11",
+                 "24",
+                 "31"
                ]
              },
              {
@@ -653,10 +653,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "33",
-                 "37",
-                 "41",
-                 "48",
-                 "57"
+                 "36",
+                 "40",
+                 "47",
+                 "56"
                ]
              },
              {
@@ -664,11 +664,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "56",
-                 "57",
-                 "57",
                  "58",
-                 "57"
+                 "59",
+                 "60",
+                 "61",
+                 "61"
                ]
              }
            ]
