--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 18:05:04 2018</p>
+         Last Run: Fri Jul 20 19:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>16</td>
                         <td>16</td>
                         <td>6</td>
-                        <td>50</td>
+                        <td>51</td>
                         <td>3</td>
                         <td>10</td>
                         <td>S</td>
@@ -71,14 +71,14 @@
                         <td>19</td>
                         <td>15</td>
                         <td>33</td>
-                        <td>6</td>
+                        <td>7</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>54</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
@@ -86,7 +86,7 @@
                         <td>6</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>62</td>
+                        <td>52</td>
                      </tr>
                   </tbody>
                </table>
@@ -214,7 +214,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
+                 "51",
                  "41",
                  "33",
                  "33",
@@ -229,8 +229,8 @@
                  "4",
                  "10",
                  "16",
-                 "54",
-                 "62"
+                 "47",
+                 "52"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 18:05:04 2018</p>
+         Last Run: Fri Jul 20 19:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -269,12 +269,12 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>0</td>
                         <td>37</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>ENE</td>
                         <td>6</td>
                      </tr>
@@ -295,7 +295,7 @@
                         <td>Clear</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>8</td>
+                        <td>2</td>
                         <td>50</td>
                         <td>0</td>
                         <td>13</td>
@@ -344,7 +344,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "21",
+                 "20",
                  "19",
                  "17"
                ]
@@ -355,7 +355,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "21",
+                 "20",
                  "19",
                  "17"
                ]
@@ -410,7 +410,7 @@
                "data":[
                  "0",
                  "2",
-                 "8"
+                 "2"
                ]
              },
              {
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Jul 20 18:05:04 2018</p>
+         Last Run: Fri Jul 20 19:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -472,11 +472,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>6</td>
-                        <td>32</td>
+                        <td>31</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>52</td>
+                        <td>33</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -484,47 +484,47 @@
                         <td>23</td>
                         <td>23</td>
                         <td>7</td>
-                        <td>34</td>
+                        <td>33</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>51</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>10</td>
-                        <td>38</td>
+                        <td>8</td>
+                        <td>37</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>SE</td>
-                        <td>47</td>
+                        <td>ESE</td>
+                        <td>40</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>6</td>
-                        <td>46</td>
+                        <td>24</td>
+                        <td>45</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>45</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>7</td>
-                        <td>55</td>
+                        <td>24</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SE</td>
-                        <td>44</td>
+                        <td>ESE</td>
+                        <td>42</td>
                      </tr>
                   </tbody>
                </table>
@@ -642,9 +642,9 @@
                "data":[
                  "6",
                  "7",
-                 "10",
-                 "6",
-                 "7"
+                 "8",
+                 "24",
+                 "24"
                ]
              },
              {
@@ -652,11 +652,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "32",
-                 "34",
-                 "38",
-                 "46",
-                 "55"
+                 "31",
+                 "33",
+                 "37",
+                 "45",
+                 "54"
                ]
              },
              {
@@ -664,11 +664,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "52",
-                 "51",
-                 "47",
-                 "45",
-                 "44"
+                 "33",
+                 "37",
+                 "40",
+                 "42",
+                 "42"
                ]
              }
            ]
