--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 00:05:03 2018</p>
+         Last Run: Sat Jul 21 01:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>16</td>
                         <td>16</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>53</td>
                         <td>3</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>5</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -46,9 +46,9 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>42</td>
                         <td>4</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>S</td>
                         <td>9</td>
                      </tr>
@@ -58,11 +58,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>11</td>
-                        <td>34</td>
+                        <td>32</td>
                         <td>6</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>20</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -70,10 +70,10 @@
                         <td>19</td>
                         <td>19</td>
                         <td>15</td>
-                        <td>32</td>
+                        <td>31</td>
                         <td>7</td>
                         <td>10</td>
-                        <td>WSW</td>
+                        <td>SW</td>
                         <td>43</td>
                      </tr>
                      <tr>
@@ -86,7 +86,7 @@
                         <td>7</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>45</td>
+                        <td>46</td>
                      </tr>
                   </tbody>
                </table>
@@ -214,10 +214,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "44",
-                 "34",
+                 "53",
+                 "42",
                  "32",
+                 "31",
                  "26"
                ]
              },
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "5",
+                 "4",
                  "9",
-                 "20",
+                 "15",
                  "43",
-                 "45"
+                 "46"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 00:05:03 2018</p>
+         Last Run: Sat Jul 21 01:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -295,11 +295,11 @@
                         <td>Clear</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>50</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>NE</td>
+                        <td>ENE</td>
                         <td>2</td>
                      </tr>
                   </tbody>
@@ -410,7 +410,7 @@
                "data":[
                  "0",
                  "2",
-                 "8"
+                 "6"
                ]
              },
              {
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 00:05:03 2018</p>
+         Last Run: Sat Jul 21 01:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -508,7 +508,7 @@
                         <td>20</td>
                         <td>20</td>
                         <td>24</td>
-                        <td>46</td>
+                        <td>45</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -655,7 +655,7 @@
                  "31",
                  "33",
                  "38",
-                 "46",
+                 "45",
                  "54"
                ]
              },
